# pugen

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/cmd/: init.rs
