[package]
name = "pugen"
version = "0.1.0"
edition = "2024"
description = "The Pude's password generator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pudep/pugen"
keywords = ["cli", "tui", "bat", "cat", "pugen"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
